--- a/src/css.css
+++ b/src/css.css
@@ -15,6 +15,7 @@ img {border: 0 none;}
 body {
 	background: #ececec;
 	background-image: url(img/fon-ececec.png);
+	font-family: "Noto Sans", sans-serif;
 }
 
 .header-container, footer, .menu, .player {
@@ -24,6 +25,10 @@ body {
 
 header .logo {
 	background: #fafafa;
+}
+
+header .logo-text {
+	font-family: 'Griffy', cursive;
 }
 
 .content {
@@ -328,7 +333,7 @@ footer .copyright-copy, footer .copyright-last-year {
 	}
 
 	.header-container .logo-text {
-		font-size: 3em;
+		font-size: 3.6em;
 		width: 175px;
 	}
 
@@ -458,6 +463,7 @@ footer .copyright-copy, footer .copyright-last-year {
 	}
 
 	.header-container .logo-text {
+		font-size: 3.8em;
 		height: 100px;
 		line-height: 100px;
 	}
