--- a/src/css.css
+++ b/src/css.css
@@ -102,8 +102,8 @@ header .menu li > a {
 /*==============  Player ==============*/
 .player {
 	align-items: center;
-	bottom: 0;
 	border-top: 1px solid #666;
+	bottom: 0;
 	display: flex;
 	height: 2.5em;
 	position: fixed;
@@ -126,7 +126,6 @@ header .menu li > a {
 	border-radius: 2px;
 	display: inline-block;
 	height: 5px;
-	width: 200px;
 }
 
 .player .track-progress-bar .track-progress {
@@ -334,7 +333,7 @@ footer .copyright-copy, footer .copyright-last-year {
 
 
 /**********************************************************************************
- * Tablet sized screen
+ * Tablet sized screen or larger
  **********************************************************************************/
 @media screen and (min-width: 48em) {
 	.header-container {
@@ -438,7 +437,6 @@ footer .copyright-copy, footer .copyright-last-year {
 
 /*============== Player ==============*/
 	.player .track-progress-bar-container {padding: 0 10px;}
-	.player .track-progress-bar {display: none;}
 	.player .total-time::before {
 		content: "/";
 		margin: 5px;
@@ -466,6 +464,9 @@ footer .copyright-copy, footer .copyright-last-year {
 }
 
 
+/**********************************************************************************
+ * Tablet size only
+ **********************************************************************************/
 @media screen and (min-width: 48em) and (max-width: 63.99em) {
 	.header-container .logo-text {
 		height: 124px;
@@ -493,6 +494,9 @@ footer .copyright-copy, footer .copyright-last-year {
 	.menu-main li > a .icon {
 		margin: 0 10px 0 6px;
 	}
+
+/*============== Player ==============*/
+	.player .track-progress-bar {display: none;}
 }
 
 
@@ -619,6 +623,23 @@ footer .copyright-copy, footer .copyright-last-year {
 		padding: 0;
 	}
 
+
+/*============== Player ==============*/
+	.player .track-title, .player .track-progress-bar-container {font-size: 0.9em;}
+	.player .fas:not(.fa-chevron-up) {font-size: 1.2em;}
+
+	.player .track-progress-bar-container {
+		align-items: center;
+		flex: auto;
+		padding: 0 10px;
+		width: 38%;
+	}
+	.player .track-progress-bar {
+		flex: auto;
+		margin: 0 8px;
+	}
+	.player .total-time::before {content: ""; margin: 0 auto;}
+
 /*============== Footer ==============*/
 	footer .social-label {
 		display: block;
@@ -644,6 +665,11 @@ footer .copyright-copy, footer .copyright-last-year {
 	.menu-main > ul, .header-container .toggle-language-wrapper > a {
 		margin-left: 2%;
 		margin-right: 2%;
+	}
+
+	.player .track-progress-bar-container {
+		margin-right: 8%;
+		width: 42%;
 	}
 
 /*============== Debug ==============*/
