fixed the unscrollable playlist issue

--- a/src/css.css
+++ b/src/css.css
@@ -10,6 +10,7 @@
  **********************************************************************************/
 .shadow-top {box-shadow: 0 -3px 5px rgba(50, 50, 50, 0.57);}
 .shadow-bottom {box-shadow: 0 3px 5px rgba(50, 50, 50, 0.57);}
+
 .menu-closed {
 	height: 0;
 	overflow: hidden;
@@ -70,10 +71,6 @@ header .logo-text {
 
 
 /*==============  Menus ==============*/
-header .menu-music > ul {
-	margin-top: 0;
-}
-
 .menu li {
 	list-style-type: none;
 }
@@ -83,6 +80,9 @@ header .menu-music > ul {
 	text-align: left;
 }
 
+header .menu-music > ul {
+	margin-top: 0;
+}
 
 /*============== Language Menu ==============*/
 .menu-language-choice a .flag {
@@ -101,10 +101,20 @@ header .menu-music > ul {
 
 
 /*============== Playlist Menu ==============*/
-.menu-playlist{
-	bottom: 2.5em;
+.menu-playlist-wrapper {
+	background: #333;
+	border-right: 1px solid #666;
+	border-top: 1px solid #666;
 	position: fixed;
 }
+.menu-playlist {
+	border-radius: 10px;
+	border-top: 1px solid #888;
+	margin: 10px 10px 0 0;
+	overflow-y: auto;
+}
+.menu-playlist li > a {display: flex;}
+.menu-playlist li > a .playlist-title {flex: auto;}
 
 
 /*==============  Player ==============*/
@@ -255,11 +265,15 @@ footer .copyright-copy, footer .copyright-last-year {
 		padding: 0;
 	}
 
+
 	.menu li > a {
-		display: block;
 		font-size: 1.15em;
 		padding: 12px 8px;
 		text-align: left;
+	}
+
+	.menu:not(.menu-playlist) li > a {
+		display: block;
 	}
 
 	.menu-main li > a .icon {
@@ -271,11 +285,16 @@ footer .copyright-copy, footer .copyright-last-year {
 		vertical-align: middle;
 	}
 
+	.menu-playlist-wrapper {bottom: 3em;}
+	.menu-playlist {max-height: calc(80vh - 3em);}
+
+	.menu-playlist li > a .playlist-time {margin-left: 5px;}
+
 
 /*============== Content ==============*/
 	.content {
-		min-height: calc(100vh - 64px - 75px - 3em); /* 100 - header-height - padding - player */
 		margin: 25px 0 50px;
+		min-height: calc(100vh - 64px - 75px - 3em); /* 100 - header-height - padding - player */
 	}
 
 
@@ -310,6 +329,10 @@ footer .copyright-copy, footer .copyright-last-year {
 		margin: 0 24px;
 		padding: 10px 8px;
 	}
+
+	.menu-playlist-wrapper {bottom: 2.5em;}
+	.menu-playlist {height: calc(80vh - 2.5em);}
+	.menu-playlist li > a .playlist-time {margin-left: 10px;}
 
 	.content {
 		min-height: calc(100vh - 64px - 75px - 2.5em); /* 100 - header-height - padding - player */
@@ -406,9 +429,7 @@ footer .copyright-copy, footer .copyright-last-year {
 		width: 50%;
 	}
 
-	.menu-main-wrapper {
-		justify-content: flex-end;
-	}
+	.menu-main-wrapper {justify-content: flex-end;}
 
 	.menu-language-choice > ul, .menu-main > ul {
 		margin: 0 0 12px 0;
@@ -431,11 +452,15 @@ footer .copyright-copy, footer .copyright-last-year {
 		vertical-align: middle;
 	}
 
+	.menu-playlist-wrapper {bottom: 2.5em;}
+	.menu-playlist {height: calc(60vh - 2.5em);}
+	.menu-playlist li > a .playlist-time {margin-left: 10px;}
+
 
 /*============== Content ==============*/
 	.content {
-		min-height: calc(100vh - 164px - 90px - 2.5em); /* 100 - header-height - padding - player */
 		margin: 40px 0 50px;
+		min-height: calc(100vh - 164px - 90px - 2.5em); /* 100 - header-height - padding - player */
 	}
 
 
@@ -485,9 +510,14 @@ footer .copyright-copy, footer .copyright-last-year {
 		width: 80%;
 	}
 
-	.menu li > a {
+	.menu:not(.menu-playlist) li > a {
 		display: block;
 		font-size: 1.1em;
+		padding: 12px 8px;
+	}
+
+	.menu-playlist li > a {
+		font-size: 1em;
 		padding: 12px 8px;
 	}
 
@@ -534,6 +564,9 @@ footer .copyright-copy, footer .copyright-last-year {
 		display: none; /* No main menu button on large screens */
 	}
 
+	.menu-language-choice li > a, .menu-music li > a {display: block;}
+	.menu-language-choice li > a, .menu-music li > a, .menu-playlist li > a {padding: 12px 8px;}
+
 
 /*============== Language Menu ==============*/
 	.header-container .toggle-language-wrapper {
@@ -561,11 +594,6 @@ footer .copyright-copy, footer .copyright-last-year {
 	.menu-language-choice {
 		display: inline-block;
 		min-width: 300px;
-	}
-
-	.menu-language-choice li > a, .menu-music li > a, .menu-playlist li > a {
-		display: block;
-		padding: 12px 8px;
 	}
 
 
@@ -622,6 +650,9 @@ footer .copyright-copy, footer .copyright-last-year {
 		flex-flow: column;
 		padding: 0;
 	}
+
+/*============== Playlist Menu ==============*/
+	.menu-playlist li > a {font-size: 0.9em;}
 
 
 /*============== Player ==============*/
