--- a/src/css.css
+++ b/src/css.css
@@ -36,8 +36,12 @@ header .logo-text {
 	font-family: 'Griffy', cursive;
 }
 
-.content {
-	background-color: #fff;
+header, .content-wrapper {
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
+.content article {
+	text-align: justify;
 }
 
 /**********************************************************************************
@@ -290,10 +294,9 @@ footer .copyright-copy, footer .copyright-last-year {
 
 
 /*============== Content ==============*/
-	.content {
-		margin: 25px 0 50px;
-		min-height: calc(100vh - 64px - 75px - 3em); /* 100 - header-height - padding - player */
-	}
+	/* 100% - header-height - padding - footer - player */
+	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 3em);}
+	.content {padding: 0.67em 1em;}
 
 
 /*============== Player ==============*/
@@ -332,9 +335,9 @@ footer .copyright-copy, footer .copyright-last-year {
 	.menu-playlist {height: calc(80vh - 2.5em);}
 	.menu-playlist li > a .playlist-time {margin-left: 10px;}
 
-	.content {
-		min-height: calc(100vh - 64px - 75px - 2.5em); /* 100 - header-height - padding - player */
-	}
+	 /* 100% - header-height - footer - player */
+	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 2.5em);}
+	.content {padding: 0.67em 1.5em;}
 
 	.player {height: 2.5em;}
 	.player .playlist, .player .player-controls a {padding: 0 15px;}
@@ -456,9 +459,15 @@ footer .copyright-copy, footer .copyright-last-year {
 
 
 /*============== Content ==============*/
+	.content-wrapper {
+		display: flex;
+		justify-content: center;
+		min-height: calc(100vh - 167px - 2.5em - 2.5em); /* 100% - header-height - footer - player */
+	}
+
 	.content {
-		margin: 40px 0 50px;
-		min-height: calc(100vh - 164px - 90px - 2.5em); /* 100 - header-height - padding - player */
+		max-width: 65em;
+		padding: 0.67em 2em;
 	}
 
 
@@ -522,6 +531,11 @@ footer .copyright-copy, footer .copyright-last-year {
 	.menu-main li > a .icon {
 		margin: 0 10px 0 6px;
 	}
+
+/*============== Content ==============*/
+	/* 100% - header-height - footer - player */
+	.content-wrapper {min-height: calc(100vh - 160px - 2.5em - 2.5em);}
+
 
 /*============== Player ==============*/
 	.player .track-progress-bar {display: none;}
@@ -653,6 +667,14 @@ footer .copyright-copy, footer .copyright-last-year {
 
 /*============== Playlist Menu ==============*/
 	.menu-playlist li > a {font-size: 0.9em;}
+
+
+/*============== Content ==============*/
+	.content {
+		font-size: 0.95em;
+		max-width: 68em;
+		padding: 0.7em 2.1em;
+	}
 
 
 /*============== Player ==============*/
