biography page layout

--- a/src/css.css
+++ b/src/css.css
@@ -1,7 +1,7 @@
 /**********************************************************************************
  * Debug
  **********************************************************************************/
-.content:not(.content-404) {
+.content:not(.content-bio) {
 	display: none;
 }
 
@@ -195,10 +195,14 @@ footer .copyright-copy, footer .copyright-last-year {
 
 
 /**********************************************************************************
- * Page styles
+ * Pages styles
  **********************************************************************************/
+.content h1 {
+	border-bottom: 1px solid #888;
+	padding: 0 0.5em 0.2em 0.1em;
+	border-bottom-right-radius: 0.8em;
+}
 .content-404 {text-align: center;}
-
 
 
 /**********************************************************************************
