--- a/src/css.css
+++ b/src/css.css
@@ -207,7 +207,7 @@ footer .copyright-copy, footer .copyright-last-year {
  * Pages styles
  **********************************************************************************/
 .content h1 {
-	border-bottom: 1px solid #aaa;
+	border-bottom: 1px solid #888;
 	padding: 0 0.5em 0.2em 0.1em;
 	border-bottom-right-radius: 0.8em;
 }
